changed model names

--- a/RecoveryApp/RecoveryApp/RecoveryApp.csproj
+++ b/RecoveryApp/RecoveryApp/RecoveryApp.csproj
@@ -124,6 +124,12 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\BodyPartModel.cs" />
+    <Compile Include="Models\DietModel.cs" />
+    <Compile Include="Models\InjuryModel.cs" />
+    <Compile Include="Models\PTModel.cs" />
+    <Compile Include="Models\Training_schedule.cs" />
+    <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -165,7 +171,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
