--- a/Recovery/Recovery-BackEnd/appsettings.json
+++ b/Recovery/Recovery-BackEnd/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=recovery;SslMode=none;User Id=root;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
