--- a/Recovery/Recovery-BackEnd/Recovery-BackEnd.csproj
+++ b/Recovery/Recovery-BackEnd/Recovery-BackEnd.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>Recovery_BackEnd</RootNamespace>
     <UserSecretsId>dad0c574-50c3-4fd8-9715-b24d7ee75ba4</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
