--- a/Recovery/Recovery_BackEnd/appsettings.json
+++ b/Recovery/Recovery_BackEnd/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Recovery_BackEndContext": "server=localhost;port=3306;database=recovery;sslmode=none;uid=root;password="
+    "RecoveryDBContext": "server=localhost;port=3306;database=recovery;sslmode=none;uid=root;password="
   }
 }
