--- a/Recovery/Recovery_FrontEnd_User/ClientApp/package.json
+++ b/Recovery/Recovery_FrontEnd_User/ClientApp/package.json
@@ -15,6 +15,7 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.4",
+    "react-social-login-buttons": "^3.6.0",
     "reactstrap": "^8.4.1",
     "rimraf": "^2.6.2"
   },
