--- a/Recovery/Recovery_FrontEnd_User/ClientApp/package.json
+++ b/Recovery/Recovery_FrontEnd_User/ClientApp/package.json
@@ -11,7 +11,9 @@
     "oidc-client": "^1.9.0",
     "react": "^16.0.0",
     "react-client-session": "0.0.7",
+    "react-day-picker": "^7.4.10",
     "react-dom": "^16.0.0",
+    "react-rangeslider": "^2.2.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.4",
