--- a/Recovery/Recovery_FrontEnd_User/ClientApp/package.json
+++ b/Recovery/Recovery_FrontEnd_User/ClientApp/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.24.0",
-    "bootstrap": "^4.1.3",
+    "bootstrap": "^4.2.1",
     "e": "^0.2.1",
     "jquery": "^3.5.1",
     "merge": "^1.2.1",
@@ -13,12 +13,14 @@
     "react-client-session": "0.0.7",
     "react-day-picker": "^7.4.10",
     "react-dom": "^16.0.0",
+    "react-native-card-media": "^0.1.3",
+    "react-native-simple-card-view": "^0.3.0",
     "react-rangeslider": "^2.2.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.4",
     "react-social-login-buttons": "^3.6.0",
-    "reactstrap": "^8.4.1",
+    "reactstrap": "^8.10.1",
     "rimraf": "^2.6.2"
   },
   "devDependencies": {
