added docker compose to backend

--- a/Recovery/Recovery_BackEnd/Recovery_BackEnd.csproj
+++ b/Recovery/Recovery_BackEnd/Recovery_BackEnd.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net5.0</TargetFramework>
     <UserSecretsId>8c889683-a584-4ef8-b9dd-6107c529d90b</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
