added filter in exercises and added docker

--- a/Recovery/Recovery_BackEnd/appsettings.json
+++ b/Recovery/Recovery_BackEnd/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "RecoveryDBContext": "server=localhost;port=3306;database=recovery;sslmode=none;uid=root;password="
+    "RecoveryDBContext": "Server=db;Database=recovery;Uid=root;Pwd=root;"
   }
 }
