--- a/Recovery/Recovery_Backend_Data/Recovery_Backend_Data.csproj
+++ b/Recovery/Recovery_Backend_Data/Recovery_Backend_Data.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.11" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="5.0.3" />
   </ItemGroup>
 
   <ItemGroup>
