--- a/Recovery/Recovery_FrontEnd_User/Recovery_FrontEnd_User.csproj
+++ b/Recovery/Recovery_FrontEnd_User/Recovery_FrontEnd_User.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="5.0.10" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="5.0.3" />
   </ItemGroup>
 
   <ItemGroup>
