--- a/Recovery/docker-compose.yml
+++ b/Recovery/docker-compose.yml
@@ -6,4 +6,31 @@ services:
     build:
       context: .
       dockerfile: Recovery_BackEnd/Dockerfile
+    ports:
+      - "5000:80" 
+
+  db:
+    image: mysql:8.0
+    container_name: db
+    restart: always
+    ports:
+       - '3306:3306'
+    environment:
+       MYSQL_DATABASE: recovery
+       MYSQL_ROOT_PASSWORD: root
+    volumes:
+      - dbdata:/var/lib/mysql
+
+  pma:
+      depends_on:
+       - db
+      image: phpmyadmin/phpmyadmin
+      container_name: phpmyadmin
+      restart: always
+      ports:
+       - '80:80'
+      environment:
+        PMA_HOST: db 
      
+volumes:
+  dbdata: 
