--- a/Recovery/Recovery_FrontEnd_User/Properties/launchSettings.json
+++ b/Recovery/Recovery_FrontEnd_User/Properties/launchSettings.json
@@ -3,7 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:3000"
+      "applicationUrl": "http://localhost:3000",
+      "sslPort": 0
     }
   },
   "profiles": {
@@ -21,12 +22,6 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "https://localhost:3000"
-    },
-    "Docker": {
-      "commandName": "Docker",
-      "launchBrowser": true,
-      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
-      "publishAllPorts": true
     }
   }
 }
