--- a/.github/workflows/BackEnd.yml
+++ b/.github/workflows/BackEnd.yml
@@ -18,8 +18,8 @@ jobs:
       with:
         dotnet-version: 5.0.x
     - name: Restore dependencies
-      run: dotnet restore ./Recovery.sln
+      run: dotnet restore Recovery/Recovery.sln
     - name: Build
-      run: dotnet build ./Recovery_BackEnd/Recovery_Back.csproj --configuration release
+      run: dotnet build Recovery/Recovery_BackEnd/Recovery_Back.csproj --configuration release
     - name: Test
-      run: dotnet test ./Recovery.sln --configuration release
+      run: dotnet test Recovery/Recovery.sln --configuration release
