--- a/Recovery_FrontEnd_Trainer/ClientApp/package.json
+++ b/Recovery_FrontEnd_Trainer/ClientApp/package.json
@@ -12,6 +12,7 @@
     "react": "^16.0.0",
     "react-client-session": "0.0.7",
     "react-dom": "^16.0.0",
+    "react-flexy-table": "^1.8.10",
     "react-rangeslider": "^2.2.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
