--- a/Recovery_FrontEnd_Trainer/ClientApp/package.json
+++ b/Recovery_FrontEnd_Trainer/ClientApp/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@nadavshaar/react-grid-table": "^1.0.2",
+    "@o2xp/react-datatable": "^2.0.0-beta.2",
     "axios": "^0.24.0",
     "bootstrap": "^4.1.3",
     "e": "^0.2.1",
