--- a/Recovery/Recovery_FrontEnd_User/ClientApp/package.json
+++ b/Recovery/Recovery_FrontEnd_User/ClientApp/package.json
@@ -13,6 +13,7 @@
     "react-client-session": "0.0.7",
     "react-day-picker": "^7.4.10",
     "react-dom": "^16.0.0",
+    "react-dropdown": "^1.9.2",
     "react-native-card-media": "^0.1.3",
     "react-native-simple-card-view": "^0.3.0",
     "react-rangeslider": "^2.2.0",
