--- a/.github/workflows/main_DosSantosRecovery.yml
+++ b/.github/workflows/main_DosSantosRecovery.yml
@@ -31,7 +31,7 @@ jobs:
       with:
         push: true
         tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_0454cf6b5bfe4ea6bf85160ef54a6302 }}/recoverybackend:${{ github.sha }}
-        file: ./Dockerfile
+        file: ./Recovery_BackEnd/Dockerfile
 
   deploy:
     runs-on: ubuntu-latest
