--- a/.github/workflows/main_DosSantosRecovery.yml
+++ b/.github/workflows/main_DosSantosRecovery.yml
@@ -23,15 +23,15 @@ jobs:
       uses: docker/login-action@v1
       with:
         registry: https://index.docker.io/v1/
-        username: ${{ secrets.AzureAppService_ContainerUsername_0454cf6b5bfe4ea6bf85160ef54a6302 }}
-        password: ${{ secrets.AzureAppService_ContainerPassword_a9212ad1f16246b785cac77921243ed7 }}
+        username: ${{ secrets.AzureAppService_ContainerUsername_cbac5e03b019453380fc4b470670ccd6 }}
+        password: ${{ secrets.AzureAppService_ContainerPassword_04643e6f3ef24bc4861d1e83701688dc }}
 
     - name: Build and push container image to registry
       uses: docker/build-push-action@v2
       with:
         push: true
-        tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_0454cf6b5bfe4ea6bf85160ef54a6302 }}/recoverybackend:${{ github.sha }}
-        file: ./Recovery/Recovery_BackEnd/Dockerfile
+        tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_cbac5e03b019453380fc4b470670ccd6 }}/joshiiee7/recoverybackend:${{ github.sha }}
+        file: ./Dockerfile
 
   deploy:
     runs-on: ubuntu-latest
@@ -47,5 +47,5 @@ jobs:
       with:
         app-name: 'DosSantosRecovery'
         slot-name: 'production'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_910519ff5c8742b7a8dc20067a6c7c16 }}
-        images: 'index.docker.io/${{ secrets.AzureAppService_ContainerUsername_0454cf6b5bfe4ea6bf85160ef54a6302 }}/recoverybackend:${{ github.sha }}'
+        publish-profile: ${{ secrets.AzureAppService_PublishProfile_e450910721f344539fc1cd6db791a288 }}
+        images: 'index.docker.io/${{ secrets.AzureAppService_ContainerUsername_cbac5e03b019453380fc4b470670ccd6 }}/joshiiee7/recoverybackend:${{ github.sha }}'
