--- a/Recovery/Recovery_FrontEnd_User/ClientApp/package.json
+++ b/Recovery/Recovery_FrontEnd_User/ClientApp/package.json
@@ -1,7 +1,7 @@
 {
   "name": "recovery_frontend_user",
   "version": "0.1.0",
-  "homepage": "http://joshua-dos-santos.github.io/RecoveryApp",
+  "homepage": "https://joshua-dos-santos.github.io/RecoveryApp",
   "private": true,
   "dependencies": {
     "axios": "^0.24.0",
