--- a/.github/workflows/main_DosSantosRecovery.yml
+++ b/.github/workflows/main_DosSantosRecovery.yml
@@ -31,7 +31,7 @@ jobs:
       with:
         push: true
         tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_cbac5e03b019453380fc4b470670ccd6 }}/recoverybackend:${{ github.sha }}
-        file: ./Recovery/Dockerfile
+        file: ./Recovery_BackEnd/Dockerfile
 
   deploy:
     runs-on: ubuntu-latest
